html handle bars for each page

--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,26 +1,24 @@
-<div class='card'>
-	<div class='card-header'><h2>Login</h2></div>
-	<form id='login-form' class='card-body'>
-		<div class='form-group'>
-			<label for='username-login'>Username:</label>
-			<input class='form-input' type='text' id='username-login' />
-		</div>
-		<div class='form-group'>
-			<label for='password-login'>Password:</label>
-			<input class='form-input' type='password' id='password-login' />
-		</div>
-		<div class='form-group'>
-			<button
-				id='login-button'
-				class='btn btn-primary'
-				type='submit'
-			>Login!</button>
-		</div>
-		<a href='/signup' type='button'>Signup?</a>
-	</form>
+<section class="login-page">
+    <div class="form-heading">
+        <h1>Log In</h1>
+    </div>
+    <div class="form-section">
+        <form class="login-form">
+            <div>
+                <label for="username-login">Username</label>
+                <input type="text" class="entry-field" id="username-login" />
+            </div>
+            <div>
+                <label for="password-login">Password</label>
+                <input type="password" class="entry-field" id="password-login" />
+            </div>
+            <div>
+                <button type="submit" class="login-signup-btn">Log In!</button>
+            </div>
+        </form>
+    </div>
 
-</div>
+    <a href="/signup" class="sign-in-link">sign up instead</a>
+</section>
 
-<script src='/js/login.js'></script>
-
-{{! classes & IDs must match login.js. target btn / form in event listener }}
+<script src="/javascript/login.js"></script>
