--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -1,21 +1,24 @@
-<div class='card'>
-	<div class='card-header'>
-		<h2>Sign Up for the Techno Blog!</h2>
-	</div>
-	<div id='signup' role='tabpanel'>
-		<form id='signup-form' class='card-body'>
-			<div>
-				<label for='username-signup'>Username:</label>
-				<input type='text' id='username-signup' />
-			</div>
-			<div>
-				<label for='password-signup'>Password:</label>
-				<input type='password' id='password-signup' />
-			</div>
-			<button type='submit' id='signup-btn' class='btn'>Signup!</button>
-			<a href='/login'>Login instead?</a>
-		</form>
-	</div>
-</div>
+<section class="sign-in-page">
+    <div class="form-heading">
+        <h1>Sign Up</h1>
+    </div>
+    <div class="form-section">
+        <form class="signup-form">
+            <div>
+                <label for="username-signup">Select a Username</label>
+                <input type="text" class="entry-field" id="username-signup" />
+            </div>
+            <div>
+                <label for="password-signup">Select a password</label>
+                <input type="password" class="entry-field" id="password-signup" />
+            </div>
+            <div>
+                <button type="submit" class="login-signup-btn">Sign Up!</button>
+            </div>
+        </form>
+    </div>
 
-<script src='/js/signup.js'></script>
+    <a href="/login" class="login-link">log in instead</a>
+</section>
+
+<script src="/javascript/signup.js"></script>
