--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,46 +1,41 @@
-{{! define basic structure of blog app pages: }}
+<!DOCTYPE html>
+<html lang="en">
 
-<html lang='en'>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>The Tech Blog</title>
+    <link rel="stylesheet" href="/stylesheets/style.css">
+</head>
 
-	<head>
-		<meta charset='UTF-8' />
-		<meta name='viewport' content='width=device-width, initial-scale=1.0' />
-		<title>Techno Blog</title>
-		<link rel='stylesheet' href='/css/jass.css' />
-	</head>
+<body>
+    <div class="wrapper">
+        <header>
+            <h1>
+                <a href="/">home</a>
+            </h1>
+            <nav>
+                {{#if loggedIn}}
+                <a href="/dashboard">dashboard</a>
+                <button id="logout" class="btn-no-style logout">logout</button>
+                {{else}}
+                <a href="/login">login</a>
+                {{/if}}
+            </nav>
+        </header>
+        <div class="site-row">
+            <div class="site-name">
+                <h1>The Tech Blog</h1>
+            </div>
+        </div>
+        <main>
+            {{{ body }}}
+        </main>
+    </div>
 
-	<body>
+    {{#if loggedIn}}
+    <script src="/javascript/logout.js"></script>
+    {{/if}}
+</body>
 
-		<nav>
-			<ul>
-				<li class='li-inline nav-item'><a href='/'>Home</a></li>
-				{{#if logged_in}}
-					<li class='li-inline nav-item'><a href='/dashboard'>Dashboard</a></li>
-					<li class='li-inline nav-item'><a
-							href='#'
-							class='btn'
-							id='logout'
-						>Logout</a></li>
-				{{else}}
-					<li class='li-inline nav-item'><a href='/login'>Login</a></li>
-				{{/if}}
-			</ul>
-		</nav>
-
-		<header class='display-flex justify-space-between align-center p-2'>
-			<h1>
-				<a href='/'>Techno Blog</a>
-			</h1>
-		</header>
-
-		<main>
-			{{{body}}}
-		</main>
-		<footer>
-			&copy; Techno Blog 2023
-		</footer>
-
-	</body>
 </html>
-
-<script src='/js/logout.js'></script>
