--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,312 +1,530 @@
 :root {
-    /* Colors */
-    --primary-color: #225ca3;
-    --primary-hover-color: #3486eb;
-    
-    --accent-color: #1a1a1a;
-    --dark-color: #225ca3;
-    
-    --light-color: #ffffff;
-    --error-color: #b02121;
-    --error-hover-color: rgb(247, 0, 0);
-    --entry-color: #000000;
-    --post-color: #ffffff; /* Post color */
-
-    /* Font */
-    --font-family: 'sans-serif';
-}
-
-* {
+    --primary: #555b7e;
+    --secondary: #3C415C;
+    --tertiary: #978a8a;
+    --light-dark: #1f1f1f;
+    --dark: #000000;
+    --white: white;
+    --border-radius: 0.3rem;
+  }
+  
+  * {
     box-sizing: border-box;
-}
-
-.text {
-    color: #ffffff;
-}
-
-body,
-html {
-    height: 100%;
-    padding: 0;
+  }
+  
+  body {
+    background-color: var(--dark);
     margin: 0;
-    font-family: var(--font-family);
-    color: var(--dark-color);
-}
-
-main,
-.site-name {
-    background-color: var(--accent-color);
-}
-
-a,
-.btn-no-style,
-#comment-subtitle {
-    color: var(--accent-color);
-}
-
-a:hover,
-.btn-no-style:hover {
-    color: var(--accent-color);
-}
-
-a {
+    padding: 0;
+    font-family: "IBM Plex Sans", sans-serif;
+    color: var(--white);
+    line-height: 1.5;
+    font-size: 16px;
+  }
+  
+  h1,
+  h2,
+  h3,
+  h4,
+  h5,
+  h6 {
+    font-weight: 700;
+    margin: 0;
+    line-height: 1.25;
+  }
+  
+  h2 a:visited {
+    color: var(--primary);
+  }
+  
+  h2 a {
+    color: var(--primary);
+  }
+  
+  header {
+    margin-top: 50px;
+  }
+  
+  main {
+    margin: 20px auto;
+    width: 94%;
+  }
+  
+  a {
     text-decoration: none;
-    font-weight: bold;
-    transition: color .1s;
-}
+    color: var(--white);
+  }
 
-button {
-    background-color: var(--primary-color);
-    border: 0;
-    padding: 1%;
-    color: var(--dark-color);
-    font-weight: bold;
-    transition: background-color .1s;
-    cursor: pointer;
-    border-radius: 5px;
-}
-
-button:hover {
-    background-color: var(--primary-hover-color);
-}
-
-.post-list {
-    margin: 0;
-    padding: 0;
-    list-style-type: none;
-}
-
-.go-back {
-    color: var(--dark-color);
-}
-
-textarea,
-input {
-    padding: .5%;
-    border-radius: 5px;
-    border: 2px solid var(--light-color);
-}
-
-textarea:focus,
-input:focus {
-    outline: none;
-    border: 2px solid var(--dark-color);
-}
-
-textarea {
-    min-width: 40%;
-    min-height: 100px;
-}
-
-form>div {
-    margin-bottom: 2%;
-}
-
-form label {
-    display: block;
-}
-
-.wrapper {
+  a:hover {
+    color: var(--tertiary);
+  }
+  
+  p {
+    font-size: 1.2rem;
+  }
+  
+  input {
     width: 100%;
-    min-height: 100%;
-    max-width: 1200px;
-    margin: 0 auto;
+    border: 1px solid var(--white);
+    border-radius: var(--border-radius);
+    background: var(--white);
+    margin: 0 0 5px;
+    padding: 10px;
+  }
+  
+  .card-header h2 {
+    color: var(--primary);
+  }
+  
+  .btn {
+    font-size: 1.3rem;
+    text-decoration: none;
+    padding: 6px 5px;
+    width: 100%;
+    display: block;
+    margin: 5px 0;
+    border-radius: var(--border-radius);
+    color: var(--white);
+    border: none;
+    outline: none;
+    background-color: var(--primary);
+    box-shadow: 3px 3px var(--light-dark);
+    transform: translate(-1px, -1px);
+  }
+  
+  .btn:hover {
+    color: var(--white);
+    background-color: var(--secondary);
+    transform: translate(0, 0);
+    box-shadow: 2px 2px var(--dark);
+  }
+  
+  .btn-inline {
+    display: inline;
+  }
+  
+  .li-inline {
+    display: inline;
+  }
+  
+  .navbar {
+    width: 100%;
+    position: fixed;
+    background-color: var(--tertiary);
+  }
+  
+  .nav-item {
+    margin: 0 40px;
+  }
+  
+  .nav-item a {
+    color: var(--white);
+  }
+  
+  .hero {
+    padding: 3% 4%;
+    background-color: var(--tertiary);
+    color: var(--primary);
+  }
+  
+  .hero p {
+    max-width: 75%;
+  }
+  
+  .app-title {
+    font-size: 3rem;
+    background-color: var(--primary);
+    color: var(--white);
+    padding: 0 10px;
+    display: inline-block;
+    border-radius: var(--border-radius);
+    box-shadow: 6px 5px var(--light-dark);
+  }
+  
+  .app-title a {
+    color: var(--white);
+  }
+  
+  .list-group {
+    padding: 1%;
+  }
+  
+  .list-item {
+    border: 3px solid var(--light-dark);
+    margin-bottom: 10px;
+    padding: 1.5%;
+    border-radius: var(--border-radius);
+    background-color: var(--dark);
+    color: var(--white);
+    text-decoration: none;
+  }
+  
+  .list-item:hover {
+    background-color: var(--primary);
+  }
+  
+  .footer a {
+    display: inline-block;
+    padding: 1em;
+    margin-bottom: .5em;
+    background-color: var(--primary);
+    color: var(--white);
+    border-radius: var(--border-radius);
+    text-decoration: none;
+  }
+  
+  /* CARDS */
+  .card {
+    margin: 0 0 20px 0;
+    border: 3px solid var(--light-dark);
+    border-radius: var(--border-radius);
+  }
+  
+  .card-header {
+    color: var(--primary);
+    background-color: var(--dark);
+    padding: 1%;
+    border-radius: calc(0.18rem - 1px) calc(0.18rem - 1px) 0 0;
+  }
+  
+  .card-body,
+  .newpost {
+    padding: 1%;
+  }
+  
+  /* FORM */
+  .form-label,
+  .form-input,
+  .form-textarea {
+    display: block;
+  }
+  
+  .form-label {
+    font-size: 1.1rem;
+    margin: 0 0 0 5px;
+  }
+  
+  .form-input {
+    width: 100%;
+    padding: 1%;
+    margin: 5px 0;
+    font-size: 1.2rem;
+    border: 2px solid var(--light-dark);
+    border-radius: var(--border-radius);
+    background-color: var(--light-dark);
+    color: var(--white)
+  }
+  
+  /* HEIGHT / WIDTH UTILS */
+  .min-100-vh {
+    min-height: 100vh;
+  }
+  
+  .min-100-vw {
+    min-width: 100vw;
+  }
+  
+  /* FONT UTILS */
+  .text-uppercase {
+    text-transform: uppercase;
+  }
+  
+  /* FLEX CONTENT */
+  .flex-row {
+    display: flex;
+    flex-wrap: wrap;
+  }
+  
+  .flex-column {
     display: flex;
     flex-direction: column;
-}
-
-.info-section {
-    padding: 5px 10px;
-    display: flex;
+    flex-wrap: wrap;
+  }
+  
+  .justify-space-between {
     justify-content: space-between;
-}
-
-header,
-.site-row,
-.info-section,
-.form-heading {
-    background-color: var(--dark-color);
-}
-
-.login-page,
-.sign-in-page,
-.new-form-page,
-.edit-form-page {
-    border: 3px solid var(--dark-color);
-    padding-bottom: 10px;
-}
-
-.form-heading {
-    padding: 10px;
-}
-
-.info-section,
-.content-section,
-.form-section,
-.sign-in-link,
-.login-link {
-    padding-left: 10px;
-}
-
-.content-section {
-    padding-bottom: 3px;
-    padding-top: 3px;
-    background-color: var(--entry-color);
-}
-
-.post-name,
-.post-title-section,
-.new-page {
-    padding-top: 10px;
-}
-
-header {
-    display: flex;
-    justify-content: space-between;
+  }
+  
+  .justify-space-around {
+    justify-content: space-around;
+  }
+  
+  .justify-flex-start {
+    justify-content: flex-start;
+  }
+  
+  .justify-flex-end {
+    justify-content: flex-end;
+  }
+  
+  .justify-center {
+    justify-content: center;
+  }
+  
+  .align-stretch {
+    align-items: stretch;
+  }
+  
+  .align-end {
+    align-items: flex-end;
+  }
+  
+  .align-center {
     align-items: center;
-    padding: 0 1%;
-}
-
-header h1 {
-    font-size: 1em;
-}
-
-.site-row {
-    display: flex;
-    justify-content: center;
-}
-
-.site-name {
-    margin-bottom: 10px;
-    padding: 0px 10px;
-    border: 3px solid var(--dark-color);
-    color: var(--light-color)
-}
-
-main {
-    flex: 1;
-    padding: 2% 4%;
-}
-
-.btn-no-style {
-    background: none;
-    border: none;
-    padding: 0;
-    cursor: pointer;
-    text-decoration: none;
-    font-size: 100%;
-    font-weight: bold;
-    transition: color .1s;
-    margin-left: 16px;
-}
-
-.btn-no-style:hover {
-    background: none;
-}
-
-.delete-post-btn {
-    background-color: var(--error-color);
-    color: var(--light-color);
-}
-
-.delete-post-btn:hover {
-    background-color: var(--error-hover-color);
-}
-
-.post {
-    margin-bottom: 2%;
-    line-height: 150%;
-    border: 3px solid var(--dark-color);
-    color: var(--post-color); /* Post color */
-}
-
-.post .title span {
-    font-style: italic;
-    font-size: 90%;
-    color: var(--light-color);
-}
-
-.edit-link {
-    display: block;
-    margin: -1.5% 0 2% 0;
-    color: var(--dark-color);
-}
-
-.comment-form {
-    margin-bottom: 5%;
-}
-
-.comment-textarea {
-    background-color: var(--entry-color);
-}
-
-.comment {
-    padding: 1%;
-    margin-bottom: 1%;
-}
-
-.comment:nth-child(odd) {
-    background-color: var(--dark-color);
-}
-
-.comment .meta {
-    font-size: 90%;
-    margin-bottom: .5%;
-    opacity: .6;
-}
-
-.new-post-form input {
-    width: 300px;
-}
-
-.edit-post-form {
-    margin-bottom: 5%;
-}
-
-#comment-subtitle {
-    font-size: 12px;
-    font-style: italic;
-}
-
-.new-post-section {
-    display: flex;
-    justify-content: center;
-}
-
-#create-new-post {
-    width: 15%;
-    background-color: var(--primary-color);
-}
-
-.sign-in-link,
-.login-link {
-    color: var(--dark-color);
-}
-
-.form-heading h1,
-.form-heading h2 {
-    color: var(--accent-color);
-}
-
-.login-form,
-.signup-form,
-.post-content,
-.post-title-section {
-    padding: 10px 10px 0px 0px;
-}
-
-.entry-field,
-#post-title {
-    width: 100%;
-    background-color: var(--entry-color);
-}
-
-.login-signup-btn,
-.btn {
-    width: 100%;
-    color: var(--light-color)
-}
-
-.update-btn {
-    color: var(--light-color);
-}
+  }
+  
+  .col-auto {
+    flex-grow: 1;
+  }
+  
+  .col-1 {
+    flex: 0 0 calc(100% * 1 / 12 - 2%);
+  }
+  
+  .col-2 {
+    flex: 0 0 calc(100% * 2 / 12 - 2%);
+  }
+  
+  .col-3 {
+    flex: 0 0 calc(100% * 3 / 12 - 2%);
+  }
+  
+  .col-4 {
+    flex: 0 0 calc(100% * 4 / 12 - 2%);
+  }
+  
+  .col-5 {
+    flex: 0 0 calc(100% * 5 / 12 - 2%);
+  }
+  
+  .col-6 {
+    flex: 0 0 calc(100% * 6 / 12 - 2%);
+  }
+  
+  .col-7 {
+    flex: 0 0 calc(100% * 7 / 12 - 2%);
+  }
+  
+  .col-8 {
+    flex: 0 0 calc(100% * 8 / 12 - 2%);
+  }
+  
+  .col-9 {
+    flex: 0 0 calc(100% * 9 / 12 - 2%);
+  }
+  
+  .col-10 {
+    flex: 0 0 calc(100% * 10 / 12 - 2%);
+  }
+  
+  .col-11 {
+    flex: 0 0 calc(100% * 11 / 12 - 2%);
+  }
+  
+  .col-12 {
+    flex: 0 0 100%;
+  }
+  
+  /* col-sm */
+  @media screen and (min-width: 640px) {
+    .col-sm-1 {
+      flex: 0 0 calc(100% * 1 / 12 - 2%);
+    }
+  
+    .col-sm-2 {
+      flex: 0 0 calc(100% * 2 / 12 - 2%);
+    }
+  
+    .col-sm-3 {
+      flex: 0 0 calc(100% * 3 / 12 - 2%);
+    }
+  
+    .col-sm-4 {
+      flex: 0 0 calc(100% * 4 / 12 - 2%);
+    }
+  
+    .col-sm-5 {
+      flex: 0 0 calc(100% * 5 / 12 - 2%);
+    }
+  
+    .col-sm-6 {
+      flex: 0 0 calc(100% * 6 / 12 - 2%);
+    }
+  
+    .col-sm-7 {
+      flex: 0 0 calc(100% * 7 / 12 - 2%);
+    }
+  
+    .col-sm-8 {
+      flex: 0 0 calc(100% * 8 / 12 - 2%);
+    }
+  
+    .col-sm-9 {
+      flex: 0 0 calc(100% * 9 / 12 - 2%);
+    }
+  
+    .col-sm-10 {
+      flex: 0 0 calc(100% * 10 / 12 - 2%);
+    }
+  
+    .col-sm-11 {
+      flex: 0 0 calc(100% * 11 / 12 - 2%);
+    }
+  
+    .col-sm-12 {
+      flex: 0 0 100%;
+    }
+  }
+  
+  /* col-md */
+  @media screen and (min-width: 768px) {
+    .col-md-1 {
+      flex: 0 0 calc(100% * 1 / 12 - 2%);
+    }
+  
+    .col-md-2 {
+      flex: 0 0 calc(100% * 2 / 12 - 2%);
+    }
+  
+    .col-md-3 {
+      flex: 0 0 calc(100% * 3 / 12 - 2%);
+    }
+  
+    .col-md-4 {
+      flex: 0 0 calc(100% * 4 / 12 - 2%);
+    }
+  
+    .col-md-5 {
+      flex: 0 0 calc(100% * 5 / 12 - 2%);
+    }
+  
+    .col-md-6 {
+      flex: 0 0 calc(100% * 6 / 12 - 2%);
+    }
+  
+    .col-md-7 {
+      flex: 0 0 calc(100% * 7 / 12 - 2%);
+    }
+  
+    .col-md-8 {
+      flex: 0 0 calc(100% * 8 / 12 - 2%);
+    }
+  
+    .col-md-9 {
+      flex: 0 0 calc(100% * 9 / 12 - 2%);
+    }
+  
+    .col-md-10 {
+      flex: 0 0 calc(100% * 10 / 12 - 2%);
+    }
+  
+    .col-md-11 {
+      flex: 0 0 calc(100% * 11 / 12 - 2%);
+    }
+  
+    .col-md-12 {
+      flex: 0 0 100%;
+    }
+  }
+  
+  /* col-lg */
+  @media screen and (min-width: 992px) {
+    .col-lg-1 {
+      flex: 0 0 calc(100% * 1 / 12 - 2%);
+    }
+  
+    .col-lg-2 {
+      flex: 0 0 calc(100% * 2 / 12 - 2%);
+    }
+  
+    .col-lg-3 {
+      flex: 0 0 calc(100% * 3 / 12 - 2%);
+    }
+  
+    .col-lg-4 {
+      flex: 0 0 calc(100% * 4 / 12 - 2%);
+    }
+  
+    .col-lg-5 {
+      flex: 0 0 calc(100% * 5 / 12 - 2%);
+    }
+  
+    .col-lg-6 {
+      flex: 0 0 calc(100% * 6 / 12 - 2%);
+    }
+  
+    .col-lg-7 {
+      flex: 0 0 calc(100% * 7 / 12 - 2%);
+    }
+  
+    .col-lg-8 {
+      flex: 0 0 calc(100% * 8 / 12 - 2%);
+    }
+  
+    .col-lg-9 {
+      flex: 0 0 calc(100% * 9 / 12 - 2%);
+    }
+  
+    .col-lg-10 {
+      flex: 0 0 calc(100% * 10 / 12 - 2%);
+    }
+  
+    .col-lg-11 {
+      flex: 0 0 calc(100% * 11 / 12 - 2%);
+    }
+  
+    .col-lg-12 {
+      flex: 0 0 100%;
+    }
+  }
+  
+  /* col-xl */
+  @media screen and (min-width: 1200px) {
+    .col-xl-1 {
+      flex: 0 0 calc(100% * 1 / 12 - 2%);
+    }
+  
+    .col-xl-2 {
+      flex: 0 0 calc(100% * 2 / 12 - 2%);
+    }
+  
+    .col-xl-3 {
+      flex: 0 0 calc(100% * 3 / 12 - 2%);
+    }
+  
+    .col-xl-4 {
+      flex: 0 0 calc(100% * 4 / 12 - 2%);
+    }
+  
+    .col-xl-5 {
+      flex: 0 0 calc(100% * 5 / 12 - 2%);
+    }
+  
+    .col-xl-6 {
+      flex: 0 0 calc(100% * 6 / 12 - 2%);
+    }
+  
+    .col-xl-7 {
+      flex: 0 0 calc(100% * 7 / 12 - 2%);
+    }
+  
+    .col-xl-8 {
+      flex: 0 0 calc(100% * 8 / 12 - 2%);
+    }
+  
+    .col-xl-9 {
+      flex: 0 0 calc(100% * 9 / 12 - 2%);
+    }
+  
+    .col-xl-10 {
+      flex: 0 0 calc(100% * 10 / 12 - 2%);
+    }
+  
+    .col-xl-11 {
+      flex: 0 0 calc(100% * 11 / 12 - 2%);
+    }
+  
+    .col-xl-12 {
+      flex: 0 0 100%;
+    }
+  }
