--- a/views/layouts/dashboard.handlebars
+++ b/views/layouts/dashboard.handlebars
@@ -11,25 +11,27 @@
 
 <body class="flex-column min-100-vh">
   <nav class="navbar">
-    <ul>
+    <ul class="flex-row">
       <li class="li-inline nav-item"><a href="/">Home</a></li>
       <li class="li-inline nav-item"><a href="/dashboard">Dashboard</a></li>
-      <li class="li-inline nav-item"><a href="/login">Login</a></li>
       <li class="li-inline nav-item"><a href="#" id="logout-link">Logout</a></li>
     </ul>
   </nav>
   <header class="hero">
-    <h1 class="app-title"><a href="/">The Tech Blog</a></h1>
+    <h1 class="app-title"><a href="/dashboard">Your Dashboard</a></h1>
   </header>
+
+  <section class="footer flex-row justify-center newpost">
+    <a href="/dashboard/new">New Post</a>
+  </section>
 
   <main class="col-auto">
     {{{body}}}
   </main>
-
-  <footer class="flex-row justify-center">
-    &copy; The Tech Blog Folks
-  </footer>
 </body>
 
-</html>
 <script src="/javascript/logout.js"></script>
+<script src="/javascript/edit.js"></script>
+<script src="/javascript/delete.js"></script>
+
+</html>
