--- a/views/edit-post.handlebars
+++ b/views/edit-post.handlebars
@@ -1,30 +1,22 @@
-<a href="/dashboard" class="go-back"> &larr; Back to dashboard</a>
 
-<article class="new-page">
-    <section class="edit-form-page">
-        <div class="form-heading">
-            <h2>
-                Edit Post
-            </h2>
-        </div>
-        <div class="form-section">
-            <form class="edit-post-form">
-                <div class="post-title-section">
-                    <label for="post-title">Title</label>
-                    <input type="text" name="post-title" id="post-title" value="{{post.title}}" />
-                </div>
-                <div class="post-content">
-                    <label for="post-content">Content</label>
-                    <textarea class="entry-field" id="post-content" name="post-content">{{post.content}}</textarea>
-                </div>
-                <button type="submit" class="update-btn">Update post</button>
-                <button type="button" class="delete-post-btn">Delete post</button>
-            </form>
-        </div>
-    </section>
-</article>
+<div class="post card">
+  <div class="card-header">
+    <h2>Edit Post</h2>
+  </div>
+  <form id="edit-post-form" class="card-body">
+    <input type="hidden" id="post-id" value="{{post.id}}" />
 
-{{#if loggedIn}}
-<script src="/javascript/edit-post.js"></script>
-<script src="/javascript/delete-post.js"></script>
-{{/if}}
+    <label class="form-label" for="post-title">Title</label>
+    <input type="text" id="post-title" value="{{post.title}}" class="form-input" />
+
+    <label class="form-label" for="post-body">Content</label>
+    <textarea id="post-body" class="form-input">{{post.body}}</textarea>
+
+    <button type="submit" class="btn">Update</button>
+
+    <button type="button" id="delete-btn" class="btn">Delete</button>
+  </form>
+</div>
+
+
+ 
