--- a/views/single-post.handlebars
+++ b/views/single-post.handlebars
@@ -1,23 +1,52 @@
-<a href="/dashboard" class="go-back"> &larr; Back to dashboard</a>
-<br>
-<br>
+<div class="post">
+  <article class="card">
+    <div class="card-header flex-row justify-space-between">
+      <h2>{{post.title}}</h2>
+      <div>
+        Posted by {{post.User.username}} on {{format_date post.createdAt}}
+      </div>
+    </div>
+    <div class="card-body">
+      {{post.body}}
+    </div>
+  </article>
 
-{{> post-info post}}
+  {{#if post.Comments}}
+    <section class="card">
+      <div class="card-header">
+        <h3>Comments</h3>
+      </div>
 
-{{#if loggedIn}}
-<form class="comment-form">
-    <div>
-        <textarea class="comment-textarea" name="comment-body"></textarea>
+      <div class="card-body">
+        {{#each post.Comments}}
+          <div>
+            <p>
+              {{body}}
+            </p>
+            <p>
+              &mdash; {{User.username}}, {{format_date createdAt}}
+            </p>
+          </div>
+        {{/each}}
+      </div>
+    </section>
+  {{/if}}
+
+  <form id="new-comment-form" class="card">
+    <div class="card-header">
+      <h3>Add New Comment</h3>
     </div>
 
-    <div>
-        <button type="submit">add comment</button>
+    <div class="card-body">
+      <input type="hidden" name="post-id" value="{{post.id}}" />
+
+      <label class="form-label" for="comment-body">Comment</label>
+
+      <textarea name="comment-body" class="form-input"></textarea>
+
+      <button type="submit" class="btn">Submit</button>
     </div>
-</form>
-{{/if}}
+  </form>
+</div>
 
-{{> comments post.comments}}
-
-{{#if loggedIn}}
 <script src="/javascript/comment.js"></script>
-{{/if}}
